A clear error message

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/spinner.css" />
 
     <script src="js/main.js" defer></script>
-    <title>OpenAI Image Genrator</title>
+    <title>OpenAI Image Generator</title>
   </head>
   <body>
     <header>
       <div class="navbar">
         <div class="logo">
-          <h2>OpenAI Image Genrator</h2>
+          <h2>OpenAI Image Generator</h2>
         </div>
         <div class="nav-links">
           <ul>
