resize and centered generated img

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,9 @@
       <section class="image">
         <div class="image-container">
           <h2 class="msg"></h2>
-          <img src="" alt="" id="image" />
+          <section class="img">
+            <img src="" alt="" id="image" />
+          </section>
         </div>
       </section>
     </main>
